--- a/src/components/Viewers.css
+++ b/src/components/Viewers.css
@@ -3,15 +3,47 @@
     display: grid;
     padding: 30px 0 26px;
     grid-gap: 25px;
+    gap: 25px;
     grid-template-columns: repeat(5, minmax(0, 1fr));
+}
+
+@media (max-width:768px) {
+    .viewers {
+        grid-template-columns: repeat(1, minmax(0, 1fr))
+    }
 }
 
 .viewers__wrap {
     cursor: pointer;
+    position: relative;
+    overflow: hidden;
+    padding-top: 56.25%;
     border: 3px solid rgba(249, 249, 249, 0.1);
     border-radius: 10px;
     transition: all 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s;
     box-shadow: rgb(0, 0, 0, 0.69) 0px 26px 30px -10px, rgb(0, 0, 0, 0.73) 0px 16px 10px -10px;
+}
+
+.viewers__wrap>img {
+    inset: 0;
+    display: block;
+    height: 100%;
+    object-fit: cover;
+    opacity: 1;
+    position: absolute;
+    transition: opacity 500ms ease-in-out 0s;
+    width: 100%;
+    z-index: 1;
+    top: 0;
+}
+
+.viewers__wrap>video {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    opacity: 0;
+    z-index: 0;
 }
 
 .viewers__wrap:hover {
@@ -20,8 +52,6 @@
     box-shadow: rgb(0, 0, 0, 0.80) 0px 40px 58px -16px, rgba(0, 0, 0, 0.72) 0px 30px 22px -10px;
 }
 
-.viewers__wrap>img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.viewers__wrap:hover>video {
+    opacity: 1;
 }
